<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/tumis_jamur"
            android:maxHeight="400dp"
            android:contentDescription="@string/fotoDESC" />

        <TextView
            android:id="@+id/tv_food_nama"
            android:layout_below="@+id/image"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textSize="32sp"
            android:text="@string/nama_makanan"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:id="@+id/tv_detail"
            android:layout_below="@+id/tv_food_nama"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="16dp"
            android:textSize="14sp"
            android:textStyle="italic"
            android:text="@string/test_detail"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:id="@+id/bahan"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_below="@+id/tv_detail"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textSize="18sp"
            android:text="@string/bahan_bahan"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:id="@+id/tv_ingredients"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_below="@+id/bahan"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="16dp"
            android:textSize="14sp"
            android:text="@string/test_ingredients"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:id="@+id/langkah"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_below="@id/tv_ingredients"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textSize="18sp"
            android:text="@string/langkah_langkah"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:id="@+id/tv_recipe"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_below="@id/langkah"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="16dp"
            android:textSize="14sp"
            android:text="@string/test_recipe"/>
    </RelativeLayout>

</ScrollView>