<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <View
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="118dp"
        android:layout_below="@id/tv_durasi"
        android:background="@drawable/frame" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="114dp"
        android:orientation="horizontal"
        android:padding="16dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:src="@android:color/black" />

        <TextView
            android:id="@+id/tv_food_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@+id/image"
            android:text="@string/nama_makanan"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/porsi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_food_nama"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@+id/image"
            android:text="@string/porsi"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/durasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/porsi"
            android:layout_toEndOf="@+id/image"
            android:text="@string/durasi"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_porsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_food_nama"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@+id/porsi"
            android:text="@string/_2_3_orang"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_durasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_porsi"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/durasi"
            android:text="@string/_8_10_menit"
            android:textSize="12sp" />
    </RelativeLayout>
</FrameLayout>
